--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,105 @@
+@font-face {
+  font-family: "Adelle Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Regular"), url("/sass/fonts/fontfiles/Adelle_Reg.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Italic"), url("/sass/fonts/fontfiles/Adelle_Italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Light Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Light Italic"), url("/sass/fonts/fontfiles/Adelle_LightItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Light";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Light"), url("/sass/fonts/fontfiles/Adelle_light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle SemiBold Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle SemiBold Italic"), url("/sass/fonts/fontfiles/Adelle_SemiBoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle SemiBold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle SemiBold"), url("/sass/fonts/fontfiles/Adelle_Semibold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Bold"), url("/sass/fonts/fontfiles/Adelle_Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Bold Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Bold Italic"), url("/sass/fonts/fontfiles/Adelle_BoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle ExtraBold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle ExtraBold"), url("/sass/fonts/fontfiles/Adelle_ExtraBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle ExtraBold Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle ExtraBold Italic"), url("/sass/fonts/fontfiles/Adelle_ExtraBoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Heavy";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Heavy"), url("/sass/fonts/fontfiles/Adelle_Heavy.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Adelle Heavy Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Adelle Heavy Italic"), url("/sass/fonts/fontfiles/Adelle_HeavyItalic.woff") format("woff");
+}
+
+body, .primary-menu .MuiAccordionDetails-root p a {
+  font-family: "Adelle Regular";
+}
+
+.primary-menu .MuiAccordion-root p {
+  font-family: "Adelle Bold";
+}
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
 .primary-menu {
   text-align: right;
   background-color: #ffffff;
@@ -165,4 +267,4 @@
 .primary-menu .Mui-expanded.MuiAccordion-root, .primary-menu .Mui-expanded.MuiAccordionSummary-content {
   margin: 0;
 }
-/*# sourceMappingURL=HeaderNav.css.map */
+/*# sourceMappingURL=style.css.map */
