add News and Events page

--- a/src/component/navigation/header-nav/_HeaderNav.scss
+++ b/src/component/navigation/header-nav/_HeaderNav.scss
@@ -27,6 +27,11 @@
     }
   }
 
+  img {
+    width: 100%;
+    height: auto;
+  }
+
   .nav-menu {
     background-color: white;
     width: 391px;
