--- a/src/component/alumni-success/_AlumniSuccess.scss
+++ b/src/component/alumni-success/_AlumniSuccess.scss
@@ -26,13 +26,43 @@
     }
   }
 
+  .swiper-pagination {
+    .swiper-pagination-bullet {
+      width: 12px;
+      height: 12px;
+      background: #f15a22;
+      margin: 0 7px;
+    }
+  }
+
   .slide {
     border: 1px solid #eb5f25;
     border-radius: 9px;
     padding: 28px 26px 91px 26px;
     margin: 0 0.5rem;
     box-shadow: 6px 6px #eb5f25;
-    // width: 367px;
+    position: relative;
+    display: block;
+  }
+
+  .char1,
+  .char2 {
+    position: absolute;
+    font-family: Helvetica;
+    font-size: 400px;
+    font-weight: normal;
+    color: #f15a22;
+    opacity: 0.15;
+  }
+
+  .char1 {
+    top: -25rem;
+    left: -0.5rem;
+  }
+  .char2 {
+    top: 1.5rem;
+    right: 0.5rem;
+    transform: rotate(360deg) scale(-1, -1);
   }
 
   .alumni-name {
