--- a/src/component/navigation/header-nav/_HeaderNav.scss
+++ b/src/component/navigation/header-nav/_HeaderNav.scss
@@ -6,6 +6,11 @@
   justify-content: flex-start;
   align-items: center;
   border-bottom: 1px solid #dedede;
+
+  .logo {
+    width: 50vw;
+    margin: 20px auto 4px 18px;
+  }
   div {
     padding: 0;
     margin: 0;
@@ -35,7 +40,7 @@
   .nav-menu {
     background-color: white;
     width: 391px;
-    height: 680px;
+    height: 712px;
     display: flex;
     // justify-content: center;
     flex-flow: column;
