--- a/src/page/top-page/_TopPage.scss
+++ b/src/page/top-page/_TopPage.scss
@@ -4,14 +4,15 @@
     height: auto;
   }
 
+  .intro,
+  .top-apply {
+    background-position: center !important;
+  }
+
   .intro {
     position: relative;
     margin-bottom: 295px;
-
-    img {
-      width: 428px;
-      height: 422px;
-    }
+    height: 422px;
 
     .intro-desc {
       position: absolute;
@@ -36,7 +37,7 @@
       }
     }
 
-    button {
+    .button {
       position: absolute;
       top: 538px;
       left: 92px;
@@ -46,26 +47,36 @@
       border-radius: 5px;
       padding: 0;
       border: none;
-
-      a {
-        width: 192px;
-        height: 56px;
-        display: block;
-        padding: 1rem 20px 11px 20px;
-
-        @extend %fontS !optional;
-        font-size: 22px;
-        text-decoration: none;
-        color: #ffffff;
-      }
+      width: 192px;
+      height: 56px;
+      display: block;
+      padding: 1rem 20px 11px 20px;
+      line-height: normal;
+      @extend %fontS !optional;
+      font-size: 22px;
+      text-decoration: none;
+      color: #ffffff;
+      text-align: center;
     }
   }
 
   .intro-movie {
     margin: 0 36px;
     iframe {
-      width: 341px;
-      height: 213px;
+      width: 82vw;
+      height: 52vw;
+    }
+  }
+  .intro-movie-wrap {
+    display: inline-block;
+    position: relative;
+    img {
+      transform: scale(1.2);
+    }
+
+    .intro-movie {
+      position: absolute;
+      top: 1rem;
     }
   }
 
@@ -96,12 +107,7 @@
   .top-apply {
     position: relative;
     margin-bottom: 5rem;
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+
     z-index: 2;
     height: 464px;
     .overlay {
