--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -13,7 +13,8 @@ code {
     monospace;
 }
 
-p {
+p,
+a {
   @extend %fontReg !optional;
   font-size: 13px;
   color: #707070;
@@ -29,4 +30,8 @@ iframe {
 img {
   width: 100%;
   height: auto;
+}
+
+ul {
+  list-style-type: none;
 }
