add cookie alert window and modify menu route

--- a/src/page/top-page/_TopPage.scss
+++ b/src/page/top-page/_TopPage.scss
@@ -71,7 +71,7 @@
     display: inline-block;
     position: relative;
     img {
-      transform: scale(1.2);
+      transform: scaleY(1.2);
     }
 
     .intro-movie {
