--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,9 @@
 
 @import "../component/navigation/header-nav/HeaderNav";
 @import "../page/top-page/TopPage";
+@import "../page/about-us-main//AboutUsMain";
+@import "../page/instructors/Instructors";
+@import "../page//alumni/Alumni";
+@import "../component/alumni-success/AlumniSuccess";
+@import "../component/alumni-single/AlumniSingle";
+@import "../component/student-work/student-work-top-intro/StudentWorkTopIntro";
