--- a/src/page/instructors/_Instructors.scss
+++ b/src/page/instructors/_Instructors.scss
@@ -3,4 +3,20 @@
     width: 100%;
     height: auto;
   }
+
+  .instructor-top {
+    margin-bottom: 65px;
+
+    h1 {
+      @extend %fontS !optional;
+      font-size: 23px;
+      margin: 65px 90px 22px 90px;
+      color: #f15a22;
+    }
+
+    p {
+      text-align: left;
+      margin: 1rem 35px;
+    }
+  }
 }
