--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,6 @@
 @import "../component/alumni-success/AlumniSuccess";
 @import "../component/alumni-single/AlumniSingle";
 @import "../component/student-work/student-work-top-intro/StudentWorkTopIntro";
+@import "../component/student-work/student-work-intro/StudentWorkIntro";
+@import "../page/projectlist-page/ProjectListPage";
+@import "../page/project-category-page/ProjectCategoryPage";
