--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,5 @@
 @import "../component/student-work/student-work-intro/StudentWorkIntro";
 @import "../page/projectlist-page/ProjectListPage";
 @import "../page/project-category-page/ProjectCategoryPage";
+@import "../page/contact/Contact";
+@import "../page/project-page/ProjectPage";
