--- a/src/component/navigation/footer-nav/_FooterNav.scss
+++ b/src/component/navigation/footer-nav/_FooterNav.scss
@@ -1,6 +1,6 @@
 .footer-menu {
   height: 80px;
-  border-top: 1px solid #707070;
+  border-top: 0.5px solid #dedede;
   ul {
     margin: 25px 0 25px 0;
     padding: 0;
