--- a/src/component/navigation/header-nav/_HeaderNav.scss
+++ b/src/component/navigation/header-nav/_HeaderNav.scss
@@ -8,8 +8,10 @@
   border-bottom: 0.5px solid #dedede;
 
   .logo {
-    width: 50vw;
     margin: 20px auto 4px 18px;
+    img {
+      width: 145px;
+    }
   }
   div {
     padding: 0;
