--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,5 @@
 @import "../page/project-category-page/ProjectCategoryPage";
 @import "../page/contact/Contact";
 @import "../page/project-page/ProjectPage";
+@import "../component/news-events/NewsEventsIntro/NewsEventsIntro";
+@import "../component/news-events/NewsEventsSingle/NewsEventsSingle";
