--- a/src/component/alumni-single/_AlumniSingle.scss
+++ b/src/component/alumni-single/_AlumniSingle.scss
@@ -16,10 +16,19 @@
       margin: 0;
       font-size: 15px;
     }
+    @media screen and (min-width: 768px) {
+      .stream,
+      .year {
+        display: inline;
+        margin-right: 0.3rem;
+      }
+    }
   }
 
   .alumna-movie {
-    margin: 0 33px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
     iframe {
       width: 82vw;
       height: 82vw;
