--- a/src/page/alumni/_Alumni.scss
+++ b/src/page/alumni/_Alumni.scss
@@ -1,7 +1,7 @@
 .alumni-page {
   .alumni-page-head {
     h1 {
-      font-size: 23px;
+      // font-size: 23px;
       color: #f15a22;
       @extend %fontS !optional;
       margin: 60px 114px 27px 114px;
@@ -10,6 +10,9 @@
     p {
       margin: 0 31px 128px 31px;
       text-align: left;
+      @media screen and (min-width: 768px) {
+        padding: 0 2rem;
+      }
     }
   }
 }
