--- a/src/page/instructors/_Instructors.scss
+++ b/src/page/instructors/_Instructors.scss
@@ -18,6 +18,9 @@
     p {
       text-align: left;
       margin: 1rem 35px;
+      @media screen and (min-width: 768px) {
+        padding: 0 2rem;
+      }
     }
   }
 }
