--- a/src/page/instructors/instructor/_Instructor.scss
+++ b/src/page/instructors/instructor/_Instructor.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-flow: column;
 
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-rows: repeat(11, 1fr);
+    grid-auto-flow: column;
+  }
+
   .instructor-single {
     display: grid;
     grid-template-columns: 1fr 4fr;
