--- a/src/page/project-category-page/_ProjectCategoryPage.scss
+++ b/src/page/project-category-page/_ProjectCategoryPage.scss
@@ -13,5 +13,11 @@
       margin: 0 41px 94px 41px;
       text-align: left;
     }
+
+    .intro-desc {
+      @media screen and (min-width: 680px) {
+        padding: 0 2rem;
+      }
+    }
   }
 }
