--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -36,3 +36,27 @@ img {
 ul {
   list-style-type: none;
 }
+
+h1 {
+  font-size: 23px;
+}
+p {
+  font-size: 13px;
+}
+a {
+  font-size: 22px;
+}
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 36px;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  a {
+    font-size: 30px;
+  }
+}
