--- a/src/component/navigation/footer-nav/_FooterNav.scss
+++ b/src/component/navigation/footer-nav/_FooterNav.scss
@@ -1,11 +1,20 @@
 .footer-menu {
   height: 80px;
   border-top: 0.5px solid #dedede;
+  @media screen and (min-width: 1200px) {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    height: 125px;
+  }
   ul {
     margin: 25px 0 25px 0;
     padding: 0;
     display: flex;
     justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+      align-self: center;
+    }
   }
 
   li {
@@ -17,6 +26,10 @@
       border-right: 1px solid #707070;
       font-size: 12px;
       text-decoration: none;
+      @media screen and (min-width: 1200px) {
+        font-size: 1.5rem;
+        border: none;
+      }
     }
 
     &:last-child {
@@ -28,9 +41,18 @@
 
   .copyright {
     margin-bottom: 2rem;
+
+    @media screen and (min-width: 1200px) {
+      align-self: center;
+      margin-bottom: 0;
+    }
+
     p {
       font-family: Helvetica;
       font-size: 9px;
+      @media screen and (min-width: 1200px) {
+        font-size: 1rem;
+      }
     }
   }
 }
