--- a/src/component/navigation/header-nav/_HeaderNav.scss
+++ b/src/component/navigation/header-nav/_HeaderNav.scss
@@ -8,9 +8,12 @@
   border-bottom: 0.5px solid #dedede;
 
   .logo {
-    margin: 20px auto 4px 18px;
+    margin: 18px auto 0 10px;
+    width: 230px;
+
     img {
-      width: 145px;
+      width: 100%;
+      height: 76px;
     }
   }
   div {
@@ -131,9 +134,6 @@
     }
   }
 
-  //   .MuiButtonSummary-root {
-  //     position: relative;
-  //   }
   .MuiAccordionSummary-content {
     p {
       color: #707070;
@@ -198,11 +198,16 @@
   }
 
   @media screen and (min-width: 1200px) {
+    height: 125px;
+    .logo {
+      margin-left: 2rem;
+    }
     .nav-menu {
       width: auto;
-      height: 101px;
+      height: 125px;
       z-index: 1;
       right: 0;
+      position: static;
     }
     .nav-menu-items {
       display: flex;
@@ -217,15 +222,71 @@
       background-color: white;
     }
 
+    .MuiAccordionSummary-content {
+      p {
+        font-size: 1.5rem;
+        padding: 0;
+      }
+    }
+
+    .MuiCollapse-container {
+      a {
+        font-size: 1.25rem;
+      }
+    }
+
     ul li {
       border: none;
     }
 
-    li,
-    p,
     ul {
-      margin: 0 !important;
-      padding: 0 !important;
+      li.menu-item {
+        padding: 0;
+        a {
+          font-size: 1.5rem;
+        }
+      }
     }
+
+    // ========Accordion Config =============
+    ul {
+      height: 100%;
+      margin-top: 3rem;
+      margin-right: 2rem;
+    }
+
+    li {
+      margin-right: 1.5rem;
+    }
+
+    .MuiAccordionSummary-root {
+      min-height: unset;
+    }
+
+    .MuiAccordionSummary-expandIcon {
+      margin: 0 2rem 0 0;
+    }
+
+    .MuiAccordionSummary-root.Mui-expanded {
+      max-height: 64px;
+      min-height: unset;
+    }
+
+    .MuiCollapse-container {
+      margin-top: 2rem;
+    }
+
+    .MuiAccordionDetails-root {
+      padding-bottom: 28px;
+      p {
+        padding: 0.3rem 1.2rem;
+        width: 100%;
+      }
+      &:last-child {
+        padding-bottom: 0.5rem;
+      }
+    }
+
+    // ======================================
   }
 }
