--- a/src/page/top-page/_TopPage.scss
+++ b/src/page/top-page/_TopPage.scss
@@ -86,15 +86,24 @@
     position: relative;
     img {
       transform: scaleY(1.2);
+      @media screen and (min-width: 1200px) {
+        transform: scaleY(1);
+      }
     }
 
     .intro-movie {
       position: absolute;
-      top: 1rem;
-      margin: 0 36px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      // margin: 0 36px;
       iframe {
         width: 82vw;
         height: 52vw;
+        @media screen and (min-width: 1200px) {
+          width: 65vw;
+          height: 40vw;
+        }
       }
     }
   }
@@ -134,6 +143,9 @@
 
     p {
       margin: 0 44px 59px 44px;
+      @media screen and (min-width: 1200px) {
+        width: 45vw;
+      }
     }
 
     h2 a {
