--- a/src/page/about-us-main/_AboutUsMain.scss
+++ b/src/page/about-us-main/_AboutUsMain.scss
@@ -19,6 +19,11 @@
     background-position: center !important;
     margin-bottom: 199px;
 
+    @media screen and (min-width: 1200px) {
+      height: 48vw;
+      margin-bottom: 110px;
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -40,16 +45,30 @@
       top: 100%;
       left: 50%;
       transform: translate(-50%, -50%);
+      @media screen and (min-width: 1200px) {
+        top: calc(48vw * 0.6);
+        left: 0;
+        transform: translate(0, 0);
+        width: 48vw;
+        padding: 0 0 0 7rem;
+      }
     }
     h1 {
       @extend %fontS !optional;
       font-size: 23px;
       margin: 23px 23px 18px 23px;
       text-align: center;
+      @media screen and (min-width: 1200px) {
+        text-align: left;
+        font-size: 2.4rem;
+      }
     }
     p {
       color: #ffffff;
       margin: 0 19px 21px 19px;
+      @media screen and (min-width: 1200px) {
+        text-align: left;
+      }
     }
   }
 
@@ -60,7 +79,7 @@
 
     h1 {
       @extend %fontS !optional;
-      font-size: 23px;
+      // font-size: 23px;
       margin: 0 93px 30px 93px;
       color: #f15a22;
       text-align: center;
@@ -73,13 +92,20 @@
 
     a {
       @extend %fontS !optional;
-      font-size: 22px;
+      // font-size: 22px;
       color: #ffffff;
       padding: 15px 18px;
       background-color: #f15a22;
       text-decoration: none;
       margin: 0 auto;
       border-radius: 5px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin: 0 calc(435px / 2);
+      .intro-desc {
+        text-align: center;
+      }
     }
   }
 
@@ -89,12 +115,28 @@
     flex-flow: column;
     align-items: center;
 
+    @media screen and (min-width: 1200px) {
+      margin: 0 calc(435px / 4) 270px;
+
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 3rem;
+
+      .discover-desc {
+        order: 2;
+      }
+    }
+
     h1 {
       @extend %fontS !optional;
-      font-size: 23px;
+      // font-size: 23px;
       margin: 0 97px 30px 97px;
       color: #f15a22;
       text-align: center;
+      @media screen and (min-width: 1200px) {
+        margin: 0 0 27px 0;
+        text-align: left;
+      }
     }
 
     p {
@@ -103,12 +145,17 @@
       @media screen and (min-width: 680px) {
         padding: 0 2rem;
       }
+
+      @media screen and (min-width: 1200px) {
+        margin: 0 0 27px 0;
+        padding: 0;
+      }
     }
 
     ul {
       list-style-type: disc;
       @extend %fontReg !optional;
-      font-size: 13px;
+      // font-size: 13px;
       color: #707070;
       letter-spacing: 0.39px;
 
@@ -122,6 +169,12 @@
         padding: 0;
         align-self: flex-start;
       }
+
+      @media screen and (min-width: 1200px) {
+        margin: 0;
+        padding-left: 1.5rem;
+      }
+
       li {
         margin: 0 0 10px 0;
         padding: 0;
@@ -132,6 +185,12 @@
       width: calc(347 / 414 * 100vw);
       height: calc(324 / 414 * 100vw);
       margin: 0 34px 118px 34px;
+
+      @media screen and (min-width: 1200px) {
+        margin: 0;
+        width: 40vw;
+        height: 13vw;
+      }
     }
   }
 
@@ -140,30 +199,67 @@
     flex-flow: column;
     align-items: center;
 
+    @media screen and (min-width: 1200px) {
+      margin: 0 calc(435px / 4) 270px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(3, 0.1fr);
+      grid-gap: 1rem;
+    }
+
     h1 {
       @extend %fontS !optional;
-      font-size: 23px;
+      // font-size: 23px;
       margin: 0 90px 31px 90px;
       color: #f15a22;
       text-align: center;
+
+      @media screen and (min-width: 1200px) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        margin: 0;
+        text-align: left;
+      }
     }
 
     p {
       margin: 0 34px 31px 34px;
       text-align: left;
+      @media screen and (min-width: 1200px) {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+      }
     }
 
     .hear-alumni-img {
-      width: 84vw;
-      height: 78vw;
+      width: 45vw;
+      height: 32vw;
       background-position: right !important;
       margin: 0 34px 31px 34px;
+
+      @media screen and (min-width: 1200px) {
+        grid-column: 2 / 3;
+        grid-row: 1 / -1;
+        margin: 0;
+      }
     }
 
     a {
       font-family: Arial;
       font-size: 14px;
       width: 20vw;
+
+      @media screen and (min-width: 1200px) {
+        font-size: 20px;
+        @media screen and (min-width: 1200px) {
+          grid-column: 1 / 2;
+          grid-row: 3 / 4;
+          text-align: left;
+        }
+      }
     }
   }
 
@@ -172,10 +268,13 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 100px;
+    }
 
     h1 {
       @extend %fontS !optional;
-      font-size: 23px;
+      // font-size: 23px;
       margin: 0 90px 31px 90px;
       color: #707070;
     }
@@ -186,7 +285,7 @@
 
     a {
       @extend %fontS !optional;
-      font-size: 22px;
+      // font-size: 22px;
       color: #ffffff;
 
       background-color: #f15a22;
