--- a/src/page/instructors/instructor/_Instructor.scss
+++ b/src/page/instructors/instructor/_Instructor.scss
@@ -8,6 +8,10 @@
     grid-auto-flow: column;
   }
 
+  @media screen and (min-width: 1200px) {
+    grid-template-rows: repeat(7, 1fr);
+  }
+
   .instructor-single {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -17,6 +21,10 @@
     .profile-img {
       width: 16vw;
       height: 16vw;
+      @media screen and (min-width: 1200px) {
+        width: 6vw;
+        height: 6vw;
+      }
     }
 
     .profile {
