--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -49,7 +49,8 @@ a {
 
 @media screen and (min-width: 1200px) {
   h1 {
-    font-size: 36px;
+    font-size: 2.4rem;
+    margin-bottom: calc(80px / 1.5);
   }
 
   p {
@@ -57,6 +58,6 @@ a {
   }
 
   a {
-    font-size: 30px;
+    font-size: 1.45rem;
   }
 }
